2005-10-24  Sven Panne  <sven.panne@aedion.de>

	* admin/alut.vcproj: Added the recently introduced source files.

2005-10-10  Sven Panne  <sven.panne@aedion.de>

	* examples/playfile.c: Added missing alutExit call.

2005-10-21  Sven Panne  <sven.panne@aedion.de>

	* admin/freealut.spec: Added. Note that the neededforbuild and
	BuildRequires info is not yet correct, need to figure out how to
	compute those.

	* Makefile.am: Unbreak "make dist". Added documentation.

2005-10-05  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am, src/alutInputStream.c, src/alutInternal.h,
	src/alutLoader.c: Factored out codecs. Simplified stream
	interface.

	* src/alutCodec.c: Added.

	* src/alutBufferData.c, src/alutInputStream.c, src/alutInternal.h,
	src/alutLoader.c, src/alutUtil.c, src/alutWaveform.c: More heavy
	refactoring, mainly making the buffer data an abstract data type.

	* test_suite/test_errorstuff.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_version.c, test_suite/test_waveforms.c: Cleaned up
	and fixed the test suite (always call alutExit before exiting,
	test for AL_NONE instead of 0, no repetitions, more error checks,
	return EXIT_FAILURE on failure).

	* src/alutBufferData.c, src/alutInputStream.c: Forgot to re-indent
	these...

2005-09-30  Sven Panne  <sven.panne@aedion.de>

	* admin/.indent.pro,examples/playfile.c, include/AL/alut.h,
	src/Makefile.am, src/alutInit.c, src/alutInternal.h,
	src/alutLoader.c, src/alutWaveform.c: Some heavy refactoring of
	the input streams and buffer data types, we are moving towards
	common OO techniques here. Not completely finished, but much
	better than before.

	* src/alutBufferData.c, src/alutInputStream.c: Added.

	* src/alutWaveform.c: Instead of the 44.1kHz 16bit PCM data, use
	11.025kHz 8-bit ISDN u-law for the "Hello, world!" sound, saving
	56kB in the resulting ALUT library.

2005-09-28  Sven Panne  <sven.panne@aedion.de>
